samples/_failures_safe/1761378347_54c9ef_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_ccce0a99.c: In function ‘main’:
./samples/SAFE/__tmp_ccce0a99.c:159:33: error: expected ‘;’ at end of input
  159 |                     print_matrix
      |                                 ^
      |                                 ;
./samples/SAFE/__tmp_ccce0a99.c:159:21: error: expected declaration or statement at end of input
  159 |                     print_matrix
      |                     ^~~~~~~~~~~~
./samples/SAFE/__tmp_ccce0a99.c:159:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_ccce0a99.c:159:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_ccce0a99.c:159:21: error: expected declaration or statement at end of input
